<resources>
    <string name="app_name">MusicIntervals2Anki</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="switch_batch">Enable batch adding</string>
    <string name="label_filename">Filename</string>
    <string name="action_select_file">Select file</string>
    <string name="start_note">Start note</string>
    <string name="note_c">C</string>
    <string name="note_c_sharp">C#</string>
    <string name="note_d">D</string>
    <string name="note_d_sharp">D#</string>
    <string name="note_e">E</string>
    <string name="note_f">F</string>
    <string name="note_f_sharp">F#</string>
    <string name="note_g">G</string>
    <string name="note_g_sharp">G#</string>
    <string name="note_a">A</string>
    <string name="note_a_sharp">A#</string>
    <string name="note_b">B</string>
    <string name="octave">Octave</string>
    <string name="octave_1">1</string>
    <string name="octave_2">2</string>
    <string name="octave_3">3</string>
    <string name="octave_4">4</string>
    <string name="octave_5">5</string>
    <string name="octave_6">6</string>
    <string name="any">Any</string>
    <string name="direction">Direction</string>
    <string name="direction_asc">Ascending</string>
    <string name="direction_desc">Descending</string>
    <string name="timing">Timing</string>
    <string name="timing_melodic">Melodic</string>
    <string name="timing_harmonic">Harmonic</string>
    <string name="interval">Interval</string>
    <string name="interval_P1">P1</string>
    <string name="interval_m2">m2</string>
    <string name="interval_M2">M2</string>
    <string name="interval_m3">m3</string>
    <string name="interval_M3">M3</string>
    <string name="interval_P4">P4</string>
    <string name="interval_TT">TT</string>
    <string name="interval_P5">P5</string>
    <string name="interval_m6">m6</string>
    <string name="interval_M6">M6</string>
    <string name="interval_m7">m7</string>
    <string name="interval_M7">M7</string>
    <string name="interval_P8">P8</string>
    <string name="tempo">Tempo</string>
    <string name="instrument">Instrument</string>
    <string name="action_clear_all">Clear all fields</string>
    <string name="action_mark">Mark</string>
    <string name="action_mark_n">Mark %d</string>
    <string name="action_add_to_anki">Add to AnkiDroid</string>
    <string name="action_check_integrity">Check integrity</string>
    <plurals name="select_file">
        <item quantity="one">@string/action_select_file</item>
        <item quantity="other">Select %d files</item>
    </plurals>
    <plurals name="mi_found">
        <item quantity="one">Found 1 music interval</item>
        <item quantity="other">Found %d music intervals</item>
    </plurals>
    <string name="mi_found_one_marked">\u0020which is marked</string>
    <string name="mi_found_one_unmarked">\u0020which is NOT marked</string>
    <plurals name="mi_found_other_marked">
        <item quantity="one">; 1 of them is marked</item>
        <item quantity="other">; %d of them are marked</item>
    </plurals>
    <string name="play">Play</string>
    <string name="view_all">View all</string>
    <string name="capture_audio">Capture audio</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>
    <string name="recorded_files">Files recorded: %d</string>
    <string name="discard">Discard</string>
    <string name="latest_file">Latest file (%.2fs)</string>
    <string name="countdown_skip">Skip countdown</string>
    <string name="first_note_duration_coefficient">First note duration coefficient</string>
    <string name="sort_by">Order by:</string>
    <string name="name">Name</string>
    <string name="modification_date">Modification date</string>
    <string name="anki_permission_denied">Could not get permission to access the AnkiDroid database</string>
    <string name="fs_permission_denied">Could not get permission to access a filesystem</string>
    <string name="recording_permission_denied">Could not get permission to record audio</string>
    <string name="display_over_apps_permission_denied">Could not get permission to display over other apps</string>
    <string name="mi_not_exists">Music interval not found</string>
    <plurals name="mi_marked_result">
        <item quantity="one">One music interval successfully marked</item>
        <item quantity="other">%d music intervals successfully marked</item>
    </plurals>
    <plurals name="mi_added">
        <item quantity="one">Music interval has been successfully added to AnkiDroid</item>
        <item quantity="other">%d music intervals have been successfully added to AnkiDroid</item>
    </plurals>
    <plurals name="sound_not_provided">
        <item quantity="one">Sound file must be provided</item>
        <item quantity="other">%d sound files must be provided</item>
    </plurals>
    <plurals name="unexpected_sounds_amount">
        <item quantity="one">Single sound file must be provided (got %d)</item>
        <item quantity="other">%d sound files must be provided (got %d)</item>
    </plurals>
    <plurals name="invalid_model_fields">
        <item quantity="one">The \"%s\" note type settings are invalid. You need to configure the %s field to continue using it</item>
        <item quantity="other">The \"%s\" note type settings are invalid. You need to configure the fields %s to continue using it</item>
    </plurals>
    <plurals name="duplicate_warning">
        <item quantity="one">One music interval with parameters (%s, %s, %s, %s, %s, %s) already exists in Anki database</item>
        <item quantity="other">%d music intervals with parameters (%s, %s, %s, %s, %s, %s) already exist in Anki database</item>
    </plurals>
    <plurals name="integrity_corrupted">
        <item quantity="one">Found one corrupted note and marked it using tag starting with \"%s\"</item>
        <item quantity="other">Found %d corrupted notes and marked them using tag starting with \"%s\"</item>
    </plurals>
    <plurals name="integrity_suspicious">
        <item quantity="one">Found one suspicious note (invalid link fields) and marked it using tag starting with \"%s\"</item>
        <item quantity="other">Found %d suspicious notes (invalid link fields) and marked them using tag starting with \"%s\"</item>
    </plurals>
    <plurals name="integrity_corrupted_field_values_fixed">
        <item quantity="one">One field value previously tagged as corrupted has been fixed</item>
        <item quantity="other">%d field values previously tagged as corrupted have been fixed</item>
    </plurals>
    <plurals name="integrity_suspicious_relations_fixed">
        <item quantity="one">One relation previously tagged as suspicious has been resolved</item>
        <item quantity="other">%d relations previously tagged as suspicious have been resolved</item>
    </plurals>
    <plurals name="integrity_suspicious_fixed">
        <item quantity="one">One note previously tagged as suspicious has been fixed</item>
        <item quantity="other">%d notes previously tagged as suspicious have been fixed</item>
    </plurals>
    <plurals name="invalid_fields">
        <item quantity="one">Invalid value of \%s\ field</item>
        <item quantity="other">Invalid values of \%s\ fields </item>
    </plurals>
    <plurals name="empty_mandatory_fields">
        <item quantity="one">Mandatory field \%s\ is empty</item>
        <item quantity="other">Mandatory fields \%s\ are empty</item>
    </plurals>
    <plurals name="integrity_links">
        <item quantity="one">Automatically filled one link field</item>
        <item quantity="other">Automatically filled %d link fields</item>
    </plurals>
    <plurals name="recordings_clearing_prompt">
        <item quantity="one">The filename field contains one previously captured recording.\nDo you wish to clear it and start over or append subsequent recordings to it?</item>
        <item quantity="other">The filename field contains %d previously captured recordings.\nDo you wish to clear them and start over or append subsequent recordings to the list?</item>
    </plurals>
    <string name="clear">Clear</string>
    <string name="add_more">Add more</string>
    <string name="create_model">Note type \"%s\" is not found in AnkiDroid. Create it?</string>
    <string name="update_default_model">Default note type \"%s\" is outdated in AnkiDroid. Update it?</string>
    <string name="use_custom_model">Use custom model</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="configure">Configure</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="create_model_success">Successfully created note type \"%s\"</string>
    <string name="update_model_success">Successfully updated note type \"%s\"</string>
    <string name="create_model_error">Could not create note type</string>
    <string name="update_model_error">The update requires a full upload of the database upon next collection sync.\nPlease synchronize changes with other devices if needed and accept \"Force full sync\" in AnkiDroid->Settings->Advanced to allow automatic update of the note type.</string>
    <string name="invalid_model">Too few fields in existing \"%s\" note type. Please add additional fields in AnkiDroid or choose another model</string>
    <string name="create_deck_error">Could not create deck \"%s\"</string>
    <string name="add_card_error">Music interval adding to AnkiDroid failed</string>
    <string name="mandatory_field_empty">Mandatory field \"%s\" is empty</string>
    <string name="already_added">Music interval seems to be already added to AnkiDroid (try to select sound file)</string>
    <string name="item_replaced">Music interval replaced. Please run "Check media" in AnkiDroid to find and delete the orphaned old sound file</string>
    <string name="add_file_error">Failed to add file to AnkiDroid media</string>
    <string name="unknown_adding_error">Failed to add music interval to AnkiDroid</string>
    <string name="additional_filenames">\u0020+ %d more…</string>
    <string name="filename_with_key">%d. %s (%s, %s)</string>
    <string name="empty_mandatory_selection">At least one specific option must be selected for field \"%s\"</string>
    <string name="batch_adding_notice">
        When adding multiple music intervals at once, the selected set of sound files must obey the following rules:\n
        1. The number of files must be equal to the number of unique interval permutations for the chosen field values.\n
        2. The sound files, when sorted, must be ordered firstly by octave, then by note, then by interval.
    </string>
    <string name="do_not_show">Don\'t show this message</string>
    <string name="add_anyway">Add anyway</string>
    <string name="mark_existing">Mark existing</string>
    <string name="replace_existing">Replace</string>
    <string name="unknown_error">Unknown error (try opening AnkiDroid to see what\'s wrong)</string>
    <string name="integrity_check_completed">Integrity check completed (%d notes)</string>
    <string name="integrity_ok">No issues have been found</string>
    <string name="integrity_field_corrupted">- %s: %d corrupted, (%s)</string>
    <string name="integrity_field_suspicious">- %s: %d suspicious</string>
    <string name="fix_link_confirmation_remember_answer">Remember answer</string>
    <string name="InvalidAnkiDatabase_rowValuesAndFieldsCountMismatchException">Invalid Anki Database: row values and fields count mismatch</string>
    <string name="InvalidAnkiDatabase_unknownError">Invalid Anki Database: unknown error</string>
</resources>