<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.add.single.AddSingleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/labelFilename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filename" />

        <LinearLayout
            android:id="@+id/layoutFilenames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textFilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/actionPlay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/play" />

                <Button
                    android:id="@+id/actionCaptureAudio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:text="@string/capture_audio" />

                <Button
                    android:id="@+id/actionSelectFile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="0.4"
                    android:text="@string/action_select_file" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/labelNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_note" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkNoteCSharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/note_c_sharp" />

                <CheckBox
                    android:id="@+id/checkNoteDSharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_d_sharp" />

                <CheckBox
                    android:id="@+id/checkNoteFSharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/note_f_sharp" />

                <CheckBox
                    android:id="@+id/checkNoteGSharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_g_sharp" />

                <CheckBox
                    android:id="@+id/checkNoteASharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_a_sharp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkNoteC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_c" />

                <CheckBox
                    android:id="@+id/checkNoteD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_d" />

                <CheckBox
                    android:id="@+id/checkNoteE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_e" />

                <CheckBox
                    android:id="@+id/checkNoteF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_f" />

                <CheckBox
                    android:id="@+id/checkNoteG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_g" />

                <CheckBox
                    android:id="@+id/checkNoteA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_a" />

                <CheckBox
                    android:id="@+id/checkNoteB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_b" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkNoteAny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/any" />

        </LinearLayout>

        <TextView
            android:id="@+id/labelOctave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/octave" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkOctave1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/octave_1" />

            <CheckBox
                android:id="@+id/checkOctave2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/octave_2" />

            <CheckBox
                android:id="@+id/checkOctave3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/octave_3" />

            <CheckBox
                android:id="@+id/checkOctave4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/octave_4" />

            <CheckBox
                android:id="@+id/checkOctave5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/octave_5" />

            <CheckBox
                android:id="@+id/checkOctave6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/octave_6" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkOctaveAny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/any" />

        <TextView
            android:id="@+id/labelDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direction" />

        <RadioGroup
            android:id="@+id/radioGroupDirection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioDirectionAny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/any" />

            <RadioButton
                android:id="@+id/radioDirectionAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction_asc" />

            <RadioButton
                android:id="@+id/radioDirectionDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction_desc" />

        </RadioGroup>

        <TextView
            android:id="@+id/labelTiming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timing" />

        <RadioGroup
            android:id="@+id/radioGroupTiming"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioTimingAny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/any" />

            <RadioButton
                android:id="@+id/radioTimingMelodic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timing_melodic" />

            <RadioButton
                android:id="@+id/radioTimingHarmonic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timing_harmonic" />

        </RadioGroup>

        <TextView
            android:id="@+id/labelInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkIntervalP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_P1" />

            <CheckBox
                android:id="@+id/checkIntervalm2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_m2" />

            <CheckBox
                android:id="@+id/checkIntervalM2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_M2" />

            <CheckBox
                android:id="@+id/checkIntervalm3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_m3" />

            <CheckBox
                android:id="@+id/checkIntervalM3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_M3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkIntervalP4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_P4" />

            <CheckBox
                android:id="@+id/checkIntervalTT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_TT" />

            <CheckBox
                android:id="@+id/checkIntervalP5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_P5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkIntervalm6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_m6" />

            <CheckBox
                android:id="@+id/checkIntervalM6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_M6" />

            <CheckBox
                android:id="@+id/checkIntervalm7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_m7" />

            <CheckBox
                android:id="@+id/checkIntervalM7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_M7" />

            <CheckBox
                android:id="@+id/checkIntervalP8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval_P8" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkIntervalAny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/any" />

        <TextView
            android:id="@+id/labelTempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/inputTempo"
            android:text="@string/tempo" />

        <EditText
            android:id="@+id/inputTempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/labelInstrument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/inputInstrument"
            android:text="@string/instrument" />

        <AutoCompleteTextView
            android:id="@+id/inputInstrument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/labelFirstNoteDurationCoefficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/inputFirstNoteDurationCoefficient"
            android:text="@string/first_note_duration_coefficient" />

        <EditText
            android:id="@+id/inputFirstNoteDurationCoefficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>
</ScrollView>